# qaqc

./: Readme.md  _concept.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
qaqc/: __init__.py  _testing.py  _typing.py  constants.py  errors.py  typing.py
qaqc/core/: base.py  flagsframe.py  frame.py  utils.py  variable.py
saqc/: __init__.py  _typing.py  constants.py  errors.py  types.py
saqc/core/: __init__.py  base.py  flagsframe.py  flagsframe_np.py  frame.py  generic.py  masking.py  ops.py  univariate.py  utils.py  variable.py
tests/: test_variable.py
